--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,14 @@ migrate_working_dir/
 *.iws
 .idea/
 
+# Flutter specific
+.env
+
+# Firebase
+lib/firebase_options.dart
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
+functions/node_modules/
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
