feat: 린트/core 추가 및 PR템플릿 수정

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -21,6 +21,22 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
+    - always_declare_return_types
+    - avoid_types_on_closure_parameters
+    - avoid_escaping_inner_quotes
+    - annotate_overrides
+    - sort_constructors_first
+    - unawaited_futures
+    - directives_ordering
+    - unnecessary_parenthesis
+    - conditional_uri_does_not_exist
+    - prefer_single_quotes
+    - await_only_futures
+    - always_use_package_imports
+    - avoid_empty_else
+    - comment_references
+    - prefer_void_to_null
+    - use_key_in_widget_constructors
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
