--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.13.1
   flutter_lints: ^5.0.0
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
