--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   go_router: ^15.1.2
   table_calendar: ^3.2.0
   intl: ^0.20.2
+  google_generative_ai: ^0.4.7
 
 dev_dependencies:
   flutter_test:
