--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^3.13.1
   flutter_lints: ^5.0.0
   flutter_riverpod: ^2.6.1
+  google_generative_ai: ^0.4.7
 
 dev_dependencies:
   flutter_test:
