--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   google_generative_ai: ^0.4.7
   go_router: ^15.1.2
+  table_calendar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
