--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   go_router: ^15.1.2
   google_maps_flutter: ^2.12.2
   table_calendar: ^3.2.0
+  firebase_auth: ^5.5.4
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
