--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   table_calendar: ^3.2.0
   intl: ^0.20.2
   google_generative_ai: ^0.4.7
+  go_router: ^15.1.2
 
 dev_dependencies:
   flutter_test:
