--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_lints: ^5.0.0
   flutter_riverpod: ^2.6.1
   google_generative_ai: ^0.4.7
+  go_router: ^15.1.2
 
 dev_dependencies:
   flutter_test:
