--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_riverpod: ^2.6.1
   google_generative_ai: ^0.4.7
   go_router: ^15.1.2
+  google_maps_flutter: ^2.12.2
+
 
 dev_dependencies:
   flutter_test:
