--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   http: ^1.4.0
   flutter_dotenv: ^5.2.1
   url_launcher: ^6.3.1
-
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
