--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   google_sign_in: ^6.3.0
   http: ^1.4.0
   flutter_dotenv: ^5.2.1
+  url_launcher: ^6.3.1
 
 
 dev_dependencies:
@@ -73,6 +74,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/
     - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
