--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -60,6 +60,12 @@
 	<string>현재 위치 사용을 허용해주세요</string>
 	<key>io.flutter.embedded_views_preview</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>카메라 사용을 허용해주세요</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>앨범 접근을 허용해주세요</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>마이크 사용을 허용해주세요</string>
 	<key>GIDClientID</key>
 	<string>241683645756-d6uqecrq0rl9q08abd7eoo0gmj40mp27.apps.googleusercontent.com</string>
 	<key>CFBundleURLTypes</key>
