feat: 폰트 추가 및 지역 선택 텍스트 조정

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ flutter:
     - family: Ssangmun
       fonts:
         - asset: assets/fonts/Typo_SsangmunDongB.ttf
+    - family: Pretendard
+      fonts:
+        - asset: assets/fonts/PretendardVariable.ttf
+
   assets:
     - assets/images/
     - .env
