add: flutter svg 패키지 추가, icons 폴더 생성

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,10 +48,8 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/icons/
     - .env
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
 
   # fonts:
   #   - family: Schyler
