--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,9 @@ dependencies:
   flutter_dotenv: ^5.2.1
   url_launcher: ^6.3.1
   image_picker: ^1.1.2
-  flutter_svg: ^2.0.7
   dotted_line: ^3.2.3
-
+  flutter_svg: ^2.1.0
+  path_provider: ^2.1.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
