--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   url_launcher: ^6.3.1
   image_picker: ^1.1.2
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
