--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   url_launcher: ^6.3.1
   image_picker: ^1.1.2
   flutter_svg: ^2.0.7
+  dotted_line: ^3.2.3
 
 dev_dependencies:
   flutter_test:
