--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   image_picker: ^1.1.2
   flutter_svg: ^2.0.7
   dotted_line: ^3.2.3
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
