--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,17 +49,5 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/sns_icons/
     - .env
-
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-
