--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   shared_preferences: ^2.5.3
   flutter_svg: ^2.1.0
   path_provider: ^2.1.5
+  geolocator: ^14.0.1
+  permission_handler: ^12.0.0+1
 
 dev_dependencies:
   flutter_test:
