--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   path_provider: ^2.1.5
   geolocator: ^14.0.1
   permission_handler: ^12.0.0+1
-
+  flutter_easyloading: ^3.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
