--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   path_provider: ^2.1.5
   geolocator: ^14.0.1
   permission_handler: ^12.0.0+1
-
+  firebase_ai: ^2.1.0
+  fluttertoast: ^8.2.12
 dev_dependencies:
   flutter_test:
     sdk: flutter
